--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = gongjipsa_android
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.gongjipsaAndroid
+PRODUCT_BUNDLE_IDENTIFIER = com.baselab.gongjipsaAndroid
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.baselab. All rights reserved.
