--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.baselab" "\0"
             VALUE "FileDescription", "gongjipsa_android" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "gongjipsa_android" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.baselab. All rights reserved." "\0"
             VALUE "OriginalFilename", "gongjipsa_android.exe" "\0"
             VALUE "ProductName", "gongjipsa_android" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
